@@ -1,3 +1,8 @@
+Summary of important user-visible changes for instrument-control 0.2.0:
+-------------------------------------------------------------------
+
+ ** Parallel interface support for FreeBSD platform
+
 Summary of important user-visible changes for instrument-control 0.1.0:
 -------------------------------------------------------------------
 
@@ -32,4 +37,3 @@ Summary of important user-visible changes for instrument-control 0.1.0:
         pp_data
         pp_datadir
 
-        
